test/io/sungeun/funcPtr6.good
funcPtr6.chpl:5: error: 'foo' cannot be captured as a value because it is a generic function
