test/io/sungeun/funcPtr6.chpl
proc foo(x) {
  return x;
}

writeln(foo); // missing parens for a generic function
